@@ -1,12 +1,12 @@
-#+TITLE: Edwina
+#+TITLE: Edm
 
-Edwina is a dynamic window manager for Emacs. It automatically arranges your
+Edm is a dynamic window manager for Emacs. It automatically arranges your
 Emacs panes (called "windows" in Emacs parlance) into predefined layouts,
 [[https://dwm.suckless.org/][dwm]]-style.
 
 * Status
 
-Edwina is new and experimental. While it works very well on the subset
+Edm is new and experimental. While it works very well on the subset
 of Emacs that I use, you will definitely encounter bugs if you venture
 outside of that. Patches welcome!
 
@@ -15,21 +15,21 @@ outside of that. Patches welcome!
 ** MELPA
 
 After [[https://melpa.org/#/getting-started][enabling installation]] of MELPA
-packages, install =edwina= with =M-x package-install=.
+packages, install =edm= with =M-x package-install=.
 
 ** Manual
 
-Copy or clone Edwina somewhere on your system:
+Copy or clone Edm somewhere on your system:
 
 #+BEGIN_SRC sh
-  git clone https://github.com/ajgrf/edwina ~/.emacs.d/edwina
+  git clone https://github.com/ajgrf/edm ~/.emacs.d/edm
 #+END_SRC
 
 Then add its location to =load-path=:
 
 #+BEGIN_SRC emacs-lisp
   (add-to-list 'load-path
-               (expand-file-name "~/.emacs.d/edwina"))
+               (expand-file-name "~/.emacs.d/edm"))
 #+END_SRC
 
 ** use-package
@@ -37,19 +37,19 @@ Then add its location to =load-path=:
 Here's a complete example configuration with =use-package= for reference:
 
 #+BEGIN_SRC emacs-lisp
-  (use-package edwina
+  (use-package edm
     :ensure t
     :config
     (setq display-buffer-base-action '(display-buffer-below-selected))
-    (edwina-setup-dwm-keys)
-    (edwina-mode 1))
+    (edm-setup-dwm-keys)
+    (edm-mode 1))
 #+END_SRC
 
 * Usage
 
-Edwina divides the frame into 2 areas, the master area and the stack.
+Edm divides the frame into 2 areas, the master area and the stack.
 The master area contains the largest window(s), and other windows are
-placed in the stack. Edwina tries to place the master area to the
+placed in the stack. Edm tries to place the master area to the
 side, but if the frame is too narrow for 2 columns it will put it on
 top instead.
 
@@ -63,7 +63,7 @@ top instead.
 +-----------+---------+     +-----------+
 #+END_EXAMPLE
 
-Edwina arranges windows according to just a few parameters: the size
+Edm arranges windows according to just a few parameters: the size
 of the master area, the number of windows in master, the order of
 windows, and the current layout. By operating on these parameters
 instead of manually manipulating individual windows, you can greatly
@@ -72,7 +72,7 @@ reduce the effort required to resize and reposition windows.
 * Key Bindings
 
 By default these keys are prefixed with =C-c C-w=. Customize
-=edwina-keymap-prefix= to change the prefix.
+=edm-keymap-prefix= to change the prefix.
 
 |-------------------+--------------------------------------|
 | Binding           | Action                               |
@@ -91,12 +91,12 @@ By default these keys are prefixed with =C-c C-w=. Customize
 | =c=, =C-c=        | Clone current window                 |
 |-------------------+--------------------------------------|
 
-See also =(edwina-setup-dwm-keys)= to set up alternative dwm-like key
+See also =(edm-setup-dwm-keys)= to set up alternative dwm-like key
 bindings.
 
 * Scope
 
-Edwina does not provide workspaces or window rules, instead delegating
+Edm does not provide workspaces or window rules, instead delegating
 such functionality to other plugins and Emacs facilities (like
 [[https://github.com/wasamasa/eyebrowse][eyebrowse]]).
 
